# oxideNews-common

./: .gitignore  .pullapprove.yml  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md
.gitignore/: .gitignore
src/: errors.rs  lib.rs  news.rs
tests/: empty.rs  existing.rs
tests/data/: oxideNews.ron
