[package]
name = "oxideNews-common"
version = "0.1.0"
authors = ["Chris Palmer <chris@red-oxide.org>"]
description = "Library for common functions in oxideNews"
repository = "https://github.com/red-oxide/oxideNews-common"
license = "GPL-3.0"
readme = "README.md"
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies.ron]
version = "0.1"

[dependencies.rss]
version = "0.7"
features = ["from_url"]

[dependencies.derive_builder]
version = "0.5"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[lib]
name = "oxide_news_common"